--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <head>
     <title>Blackjack</title>
     <link href="styles/app.css" rel="stylesheet" type="text/css" media="screen">
+    <link href='http://fonts.googleapis.com/css?family=Nunito:400,700' rel='stylesheet' type='text/css'>
   </head>
   <body>
     <script src="lib/jquery.js"></script>
